# clai

./: .cruft.json  README.md  pyproject.toml  setup.cfg
.github/: check_lint.sh  format.sh
.github/workflows/: lint.yml  test.yml
clai/: __init__.py  api.py  behavior_context.py  invoke.py  main.py  message_creation.py
clai/ocr_drivers/: __init__.py  base_driver.py  linux_driver.py
tests/: test_behavior_context.py
tests/ocr_drivers/: test_base_driver.py
