[tool.poetry]
name = "clai"
version = "0.3.0"
description = "Command Line AI- this tool lets you call ChatGPT from a CLI"
authors = ["apockill <apocthiel@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.0"
pytesseract = "^0.3.10"
PyAutoGUI = "^0.9.53"
PyWinCtl = "^0.0.43"

[tool.poetry.dev-dependencies]
darglint = "^1.8.1"
vulture = "^2.5"
bandit = "^1.7"
isort = "^5.10"
flake8-bugbear = "^22.7"
black = "^22.6"
mypy = "^0.961"
pytest = "^7.1"
pytest-cov = "^3.0"
pep8-naming = "^0.13.1"
portray = "^1.7"
cruft = "^2.10"

[tool.poetry.scripts]
clai = "clai:main"
ai = "clai:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "hug"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
implicit_reexport = true
# We can't add annotations to decorators from other libraries, making this
# check not very useful
disallow_untyped_decorators = false
